fix layout issue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -193,8 +193,6 @@ ul.task-list input[type="checkbox"] {
 // Profile
 
 .post {
-  width: 100%;
-
   .more-info {
     margin-bottom: 5px;
     margin-top: 5px;
