--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -36,8 +36,8 @@ body.sticky-bottom-footer {
   img {
     width: 100%;
     height: auto;
-    object-fit: contain;
-    position: absolute;
+    // object-fit: contain;
+    // position: absolute;
   }
 }
 
